# discord-bots

./: .gitignore  Cargo.toml  Containerfile.build  README.md  bot.service.template  summarizer-bot.service.example  system_prompt.txt
.github/workflows/: ci.yml
cleanup-bot/: Cargo.toml
cleanup-bot/src/: cleanup.rs  command.rs  config.rs  config_store.rs  main.rs  onedrive.rs  scheduler.rs
cleanup-bot/src/backup/: queue.rs  worker.rs
cleanup-bot/src/cleanup/: queue.rs  task.rs  worker.rs
cleanup-bot/src/onedrive/: auth.rs  client.rs
dashboard/: Cargo.toml
dashboard/assets/: bot_list.css  breadcrumbs.css  global.css  main.css  styles.css
dashboard/src/: main.rs  metrics.rs  registry.rs  routes.rs  state.rs  storage.rs  styles.rs  views.rs
dashboard/src/views/: bot_detail.rs  bot_list.rs  breadcrumbs.rs
expiry-bot/: Cargo.toml
expiry-bot/src/: main.rs
scripts/: deploy.sh  install.sh
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  tracing.rs
src/: main.rs  tracing.rs
summarizer-bot/: Cargo.toml  README.md  system_prompt.txt
summarizer-bot/src/: config.rs  handler.rs  llm.rs  main.rs  metrics.rs
