[package]
name = "summarizer-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
ollama-rs = "0.3.3"
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
